--- a/_posts/2020-11-25-《太上感应篇》.md
+++ b/_posts/2020-11-25-《太上感应篇》.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: '《太上感应篇》'
+title: '太上感应篇'
 date: 2020-11-25
 author: 
 cover: 
@@ -25,4 +25,4 @@ tags: 太上慈悲，无量度人
 &emsp;&emsp;**如是等罪，司命随其轻重，夺其纪算，算尽则死。死有余责，乃殃及子孙。**又诸横取人财者，乃计其妻子家口以当之，渐至死丧。若不死丧，则有水火盗贼、遗亡器物、疾病口舌诸事，以当妄取之值。又枉杀人者，是易刀兵而相杀也。取非义之财者，譬如漏脯救饥、鸩酒止渴，非不暂饱，死亦及之。  
 &emsp;&emsp;**夫心起于善，善虽未为，而吉神已随之。或心起于恶，恶虽未为，而凶神已随之。其有曾行恶事，后自改悔，诸恶莫作，众善奉行，久久必获吉庆，所谓转祸为福也。**  
 &emsp;&emsp;故吉人语善、视善、行善，一日有三善，三年天必降之福。凶人语恶、视恶、行恶，一日有三恶，三年天必降之祸。胡不勉而行之。
-> 愚见：道教经典《太上感应篇》不只是劝善的经典，也是指导修行的经典。
+
